--- a/HHVideoPlayer-OC/HHVideoPlayer-OC/Base.lproj/Main.storyboard
+++ b/HHVideoPlayer-OC/HHVideoPlayer-OC/Base.lproj/Main.storyboard
@@ -26,6 +26,16 @@
                                     <action selector="reponseMethod:" destination="BYZ-38-t0r" eventType="touchUpInside" id="YGG-rr-ZFe"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="duu-Fl-nCX">
+                                <rect key="frame" x="75" y="609" width="140" height="75"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemRedColor"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <connections>
+                                    <action selector="responseMethodA:" destination="BYZ-38-t0r" eventType="touchUpInside" id="eUk-wE-tZO"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
